syntax = "proto3";

package matches;

option go_package = "./api/grpc/matches";

service Service {
  rpc Search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string msgId = 1;
  uint32 limit = 2;
  string cursor = 3;
}

message SearchResponse {
  repeated SubscriptionOutput page = 1;
}

message SubscriptionOutput {
  string id = 1;
  repeated string dsts = 2;
}
